Revision to Phase system -- added the notion of a Controller which is the parent of the Root Phase, plus general cleanup and bug squashing

--- a/src/style/glider.css
+++ b/src/style/glider.css
@@ -5,3 +5,20 @@
   display: none;
 }
 
+/* Naive classes for Part states */
+
+.part-waiting {
+  display: none;
+}
+
+.part-active {
+  display: initial;
+}
+
+.part-frozen {
+  display: initial;
+}
+
+.part-ended {
+  display: none;
+}
